--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-http-proxy": "^1.5.0",
+    "express-rate-limit": "^3.3.2",
     "jsdoc": "^3.5.5",
     "pino": "^5.10.6",
     "pino-pretty": "^2.5.0"
